@@ -4,6 +4,7 @@
 	gconf_engine
 	(setup_dialog): Use correct path for enabled
 	(main): Preload the background settings directory for performance
+	Don't #include bonobo.h
 
 	* background.schema: Update keys to use /desktop/gnome/background
 
